--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "expo": "^51.0.31",
     "expo-splash-screen": "^0.27.5",
     "expo-status-bar": "~1.12.1",
