--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "expo": "^51.0.31",
+    "expo-app-loading": "^2.1.1",
     "expo-splash-screen": "^0.27.5",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
